# espcontrol

./: .gitignore  DEVELOPERS.md  README.md  package.json
builds/: esp32-p4-86.factory.yaml  esp32-p4-86.yaml  guition-esp32-p4-jc1060p470.factory.yaml  guition-esp32-p4-jc1060p470.yaml  guition-esp32-p4-jc4880p443.factory.yaml  guition-esp32-p4-jc4880p443.yaml  guition-esp32-p4-jc8012p4a1.factory.yaml  guition-esp32-p4-jc8012p4a1.yaml  guition-esp32-s3-4848s040.factory.yaml  guition-esp32-s3-4848s040.yaml
dev-docs/: README.md  architecture.md  card-contract.md  card-type-map.md  change-workflows.md  check-matrix.md  checks-and-releases.md  cover-art-mode.md  devices-and-builds.md  display-lifecycle.md  firmware.md  font-guidelines.md  web-configurator.md
devices/: catalog.json  manifest.json
docs/: buttons-and-icons.md  display-screensaver.md  faq.md  index.md  install.md  web-ui.md
product/: product_snapshot.json
scripts/: build.py  build_web_bundle.js  check_backup_contract.js  check_config_formats.js  check_cover_art_contract.py  check_dev_docs.py  check_device_manifest.py  check_device_profiles.py  check_firmware_card_runtime.py  check_firmware_ha_bindings.py  check_firmware_modal_layouts.py  check_firmware_modals.py  check_firmware_parser.py  (+20 more)
tests/firmware/: CMakeLists.txt  alarm_delay_audio_test.cpp  artwork_controller_test.cpp  button_grid_foundations_test.cpp  configuration_service_test.cpp  configuration_store_test.cpp  display_mode_controller_test.cpp  espcontrol_app_core_test.cpp  image_pipeline_policy_test.cpp  media_volume_capability_test.cpp
(+383 files in other folders)
